--- a/MileStone2/pubspec.yaml
+++ b/MileStone2/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth:
   firebase_database:
   firebase_storage:
+  sqflite: ^2.3.0
 
 #  flutter_map: any
 #  geocoding: ^1.0.5
