--- a/MileStone2/pubspec.yaml
+++ b/MileStone2/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_database:
   firebase_storage:
   sqflite: ^2.3.0
+  intl: ^0.19.0
 
 #  flutter_map: any
 #  geocoding: ^1.0.5
