--- a/Driver/pubspec.yaml
+++ b/Driver/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth:
   firebase_database:
   firebase_storage:
+  sqflite: ^2.3.0
   intl: ^0.19.0
 
 dev_dependencies:
